# CV-analyzer

./: .gitignore  AUTHENTICATION_SETUP.md  DEMO.md  README.md  SETUP_GUIDE.md  env.example  middleware.ts  package-lock.json  package.json  setup.sh
app/: layout.tsx  page.tsx
app/about/: page.tsx
app/api/analyze-cv/: route.ts
app/api/register/: route.ts
app/api/webhooks/clerk/: route.ts
app/login/: page.tsx
app/pricing/: page.tsx
app/results/: page.tsx
app/sign-in/[[...sign-in]]/: page.tsx
app/sign-up/[[...sign-up]]/: page.tsx
app/signup/: page.tsx
backend/: README.md  cv_checker.db  env.example  main.py  pyproject.toml  requirements.txt  server_shutdown.py  start.sh  test_env_key.py
backend/database/: db_check.ipynb  model.py
backend/models/: auth.py  cv_analysis.py
backend/routes/: auth.py  cv_analysis.py  users.py  webhooks.py
backend/services/: ai_analyzer.py  auth_service.py  clerk_service.py  cv_processor.py  file_validator.py
components/: CVUploadForm.tsx  DarkModeToggle.tsx  Footer.tsx  Header.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UserDashboard.tsx
components/auth/: LoginForm.tsx  SignUpForm.tsx
lib/: utils.ts
