[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==23.2.1",
    "email-validator==2.1.0",
    "fastapi==0.104.1",
    "openai==1.3.7",
    "passlib[bcrypt]==1.7.4",
    "pillow==10.1.0",
    "pydantic[email]==2.5.0",
    "pypdf2==3.0.1",
    "python-docx==1.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
]
